Using partition for spliting vote using its value